<resources>
    <string name="app_name">生活点滴</string>
    <string name="empty_data_default" translatable="false">暂无数据</string>

    <!--登录页面-->
    <string name="page_login_input_account_hint">请输入手机号</string>
    <string name="page_login_input_verification_code">请输入验证码</string>
    <string name="page_login_button_get_verification_code">获取验证码</string>
    <string name="page_login_button_login">登录</string>
    <string name="page_login_success_send_verification_code">验证码发送成功</string>
    <string name="page_login_success_login">登录成功</string>
    <string name="page_login_error_input_account">请输入正确的手机号</string>
    <string name="page_login_error_input_verification_code">请输入正确的验证码</string>

    <!--mainTab-->
    <string name="main_tab_home">主页</string>
    <string name="main_tab_household_objects">物品</string>
    <string name="main_tab_user">我的</string>
    <string name="common_search">搜索</string>
    <string name="household_objects_search_hint">请输入搜索内容</string>
    <string name="household_objects_options_title_name">名称：</string>
</resources>
